<resources>
    <string name="app_name">Project</string>
    <string name="loading_title">Loading</string>
    <string name="location_title">Loading</string>
    <string name="prayers_title">Prayer Times</string>
    <string name="calcmethod_title">Calculation Method</string>
    <string name="tunes_title">Manual Adjustements</string>
    <string name="main_title">Configure</string>
    <string name="qibla_title">Qibla Compass</string>
    <string name="supplications_title">Supplications</string>

    <string name="channel_name">com.example.islam.project.channel_name</string>
    <string name="channel_description">com.example.islam.project.channel_description</string>


    <string name="sensor_not_found">Sensor Not Found!</string>
    <string name="qibla_direction">Qibla direction is %1$d° from North</string>
    <string name="location_error">Location Error: GPS Disabled!</string>
    <string name="enable">Enable</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="permissions_not_granted">Permissions not granted</string>
    <string name="ok">OK</string>
    <string name="location_permissions_message">Location is needed to find your country for prayer times</string>
    <string name="permissions_title">Permission needed!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="location_got">Location got</string>
    <string name="enable_location">Please Enable Location from Settings</string>
    <string name="waiting_permissions">Checking Permissions&#8230;</string>
    <string name="waiting_location">Getting Location&#8230;</string>
    <string name="service_failed">Networking issue, please try again later</string>
    <string-array name="calc_methods">
        <item>University of Islamic Sciences, Karachi</item>
        <item>Islamic Society of North America</item>
        <item>Muslim World League</item>
        <item>Umm Al-Qura University, Makkah</item>
        <item>Egyptian General Authority of Survey</item>
        <item>Institute of Geophysics, University of Tehran</item>
        <item> Gulf Region</item>
        <item>Kuwait</item>
        <item>Qatar</item>
        <item>Majlis Ugama Islam Singapura, Singapore</item>
        <item>Union Organization islamic de France</item>
        <item>Diyanet İşleri Başkanlığı, Turkey</item>
    </string-array>
    <string-array name="prayers">
        <item>Fajr</item>
        <item>Sunrise</item>
        <item>Dhuhr</item>
        <item>Asr</item>
        <item>Maghrib</item>
        <item>Isha</item>
    </string-array>
    <string-array name="hijri_months">
        <item>Muḥarram</item>
        <item>Ṣafar</item>
        <item>Rabīʿ al-Awwal</item>
        <item>Rabīʿ ath-Thānī</item>
        <item>Jumādá al-Ūlá</item>
        <item>Jumādá al-Ākhirah</item>
        <item>Rajab</item>
        <item>Sha‘bān</item>
        <item>Ramaḍān</item>
        <item>Shawwāl</item>
        <item>Dhū al-Qa‘dah</item>
        <item>Dhū al-Ḥijjah</item>
    </string-array>

    <string name="recalibrate_location">Calibrate Location</string>
    <string name="recalibrate_tunes">Adjust Times</string>
    <string name="recalibrate_calcmethod">Change Calculation Method</string>
    <string name="supplication">Supplications</string>
    <string name="qibla">Qibla direction</string>
    <string name="nav_title">Change Settings</string>

    <string name="saved">Changes saved</string>
    <string name="hijri_adj">Hijri day adjust</string>
    <string name="set">Set</string>
    <string name="language">English</string>
    <string name="arabic">Arabic</string>
    <string name="pronounce">Pronunciation</string>
    <string name="after_prayer_azkar">Dua’s after Salah</string>
    <string name="prayer_time_now">Prayer time due</string>
    <string name="midnight_title">Midnight</string>
    <string name="midnight_content">It is now midnight time</string>
    <string-array name="prayer_time_now_array">
        <item>It is now time for Fajr Prayer</item>
        <item>It is now time for Sunrise</item>
        <item>It is now time for Dhuhr Prayer</item>
        <item>It is now time for Asr Prayer</item>
        <item>It is now time for Maghrib Prayer</item>
        <item>It is now time for Isha Prayer</item>
    </string-array>


</resources>
