<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group>
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/recalibrate_location" />
        <item
            android:id="@+id/nav_tunes"
            android:icon="@drawable/ic_menu_tunes"
            android:title="@string/recalibrate_tunes" />
        <item
            android:id="@+id/nav_calcmethod"
            android:icon="@drawable/ic_menu_calcmethod"
            android:title="@string/recalibrate_calcmethod" />
        <item
            android:id="@+id/nav_supplication"
            android:icon="@drawable/ic_menu_supplication"
            android:title="@string/supplication" />

    </group>
</menu>